==> grblHAL/STM32F1xx/Src/diskio.c <==
#include "driver.h"
#include <stdint.h>
#include <stdbool.h>
#include "main.h"
#include "ff.h"
#include "diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define BOOL bool
#define TRUE true
#define FALSE false

static inline
void SELECT (void)
{
    BITBAND_PERI(SD_CS_PORT->ODR, SD_CS_PIN) = 0;
}

static inline
void DESELECT (void)
{
    BITBAND_PERI(SD_CS_PORT->ODR, SD_CS_PIN) = 1;
}

static
void xmit_spi(BYTE dat)
{
    hspi1.Instance->DR = dat;

    while(!__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_TXE));

    __HAL_SPI_CLEAR_OVRFLAG(&hspi1);
}

static
BYTE rcvr_spi (void)
{
    hspi1.Instance->DR = 0xFF; // Writing dummy data into Data register

    while(!__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_RXNE));

    return (BYTE)hspi1.Instance->DR;
}

void power_on (void)
{
    static bool init = false;

    /*
     * This doesn't really turn the power on, but initializes the
     * SSI port and pins needed to talk to the card.
     */

    if(!init) {

#ifdef SPI1_REMAP
        // Disable JTAG. NOTE: a power cycle is required after programming
        __HAL_AFIO_REMAP_SWJ_DISABLE();

        hal.delay_ms(10, NULL);
#endif

        HAL_SPI_Init(&hspi1);
    }

    __HAL_SPI_ENABLE(&hspi1);

    init = true;
    PowerFlag = 1;
}

static
void set_max_speed(void)
{
    hspi1.Instance->CR1 &= ~SPI_BAUDRATEPRESCALER_256;
    hspi1.Instance->CR1 |= SPI_BAUDRATEPRESCALER_64; // should be able to go to 12Mhz...
}
