==> terjeio/grblHAL/drivers/LPC1769/src/diskio.c <==
#include <stdint.h>
#include <stdbool.h>
#include "driver.h"
#include "ff.h"
#include "diskio.h"
    #define LPC_SD_PORT LPC_SSP0
    #define LPC_SD_PORT LPC_SSP1
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define BOOL bool
#define TRUE true
#define FALSE false

static inline
void SELECT (void)
{
    BITBAND_GPIO(SD_CS_PORT->PIN, SD_CS_PIN) = 0;
}

static inline
void DESELECT (void)
{
    BITBAND_GPIO(SD_CS_PORT->PIN, SD_CS_PIN) = 1;
}

static
void xmit_spi(BYTE dat)
{
    while(Chip_SSP_GetStatus(LPC_SD_PORT, SSP_STAT_BSY));

    Chip_SSP_SendFrame(LPC_SD_PORT, dat);

    while(Chip_SSP_GetStatus(LPC_SD_PORT, SSP_STAT_BSY));

    Chip_SSP_ReceiveFrame(LPC_SD_PORT);
}

static
BYTE rcvr_spi (void)
{
    Chip_SSP_SendFrame(LPC_SD_PORT, 0xFF);

    while(Chip_SSP_GetStatus(LPC_SD_PORT, SSP_STAT_BSY));

    return Chip_SSP_ReceiveFrame(LPC_SD_PORT);
}

void power_on (void)
{
    static bool init = false;

    /*
     * This doesn't really turn the power on, but initializes the
     * SSI port and pins needed to talk to the card.
     */

    // SPI0

    if(!init) {

        Chip_IOCON_SetPinMuxing(LPC_IOCON, sd_pinmux, sizeof(sd_pinmux) / sizeof(PINMUX_GRP_T));

        Chip_SSP_Init(LPC_SD_PORT);
        Chip_SSP_SetFormat(LPC_SD_PORT, SSP_BITS_8, SSP_FRAMEFORMAT_SPI, SSP_CLOCK_CPHA0_CPOL0);
        Chip_SSP_Set_Mode(LPC_SD_PORT, SSP_MODE_MASTER);
        Chip_SSP_Enable(LPC_SD_PORT);
    }

    Chip_SSP_SetBitRate(LPC_SD_PORT, 400000);

    init = true;
    PowerFlag = 1;
}

static
void set_max_speed(void)
{
    Chip_SSP_SetBitRate(LPC_SD_PORT, 12000000); // 12 MHz
}
